New tasks function added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             </button>
             
             <h3 class="popup-container__title">Введите задачу</h3>
-            <input type="text" class="popup-container__input">
+            <input type="text" class="popup-container__input-taskTheme">
+            <input type="text" class="popup-container__input-taskText">
             <button class="popup-container__button">Добавить</button>
         </div>
     </div>
