Added delete function

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="wrapper">
         <article class="planner-buttons">
             <button class="planner-buttons__button" id="add-btn">добавить</button>
-            <button class="planner-buttons__button" id="del-btn">удалить</button>
+            <button class="planner-buttons__button" id="del-btn" data-is-pushed="0">удалить</button>
         </article>
         <main class="tasks-window">
             <div class="tasks-window__task">
                 <div class="tasks-window__task-textBox">
-                    <h3 class="task-textBox__title">Тема</h3>
+                    <h3 class="task-textBox__title">Тема1</h3>
                     <p class="task-textBox__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt aperiam repellendus rerum totam corrupti amet, sequi culpa dignissimos facilis inventore tempora iure eaque eligendi expedita, magni neque maiores ipsam accusantium!</p>
                 </div>
                 <div class="tasks-window__buttons-img">
@@ -27,11 +27,14 @@
                     <button class="buttons-img__button">
                         <img src="img/edit.png" alt="">
                     </button>
+                    <div class="checkBox-button">
+                            <div class="checkBox-button__checked hidden"></div>
+                    </div>
                 </div>
             </div>
             <div class="tasks-window__task">
                 <div class="tasks-window__task-textBox">
-                    <h3 class="task-textBox__title">Тема</h3>
+                    <h3 class="task-textBox__title">Тема2</h3>
                     <p class="task-textBox__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt aperiam repellendus rerum totam corrupti amet, sequi culpa dignissimos facilis inventore tempora iure eaque eligendi expedita, magni neque maiores ipsam accusantium!</p>
                 </div>
                 <div class="tasks-window__buttons-img">
@@ -41,6 +44,9 @@
                     <button class="buttons-img__button">
                         <img src="img/edit.png" alt="">
                     </button>
+                    <div class="checkBox-button">
+                        <div class="checkBox-button__checked hidden"></div>
+                    </div>
                 </div>
             </div>
             
